Unreleased
==========
- Updated dependecies to latest released versions

- Removed dependency on Castle.Components.Common.EmailSender.dll and is now using IEmailSender from Castle.Core.dll

- Applied Michael Davis patch fixing MR-ISSUE-494
 "AbstractPaginationViewComponent with PreserveQueryString = true double-encodes query string parameters"

- Updated Newtonsoft.Json.dll to v3.5.0.0

- Removed HtmlHelper and ValidationHelper

- Fixed MR-ISSUE-554 
  "Image url's in single quotes get rewritten as empty strings by JSCombine View Component"

- Applied Alex's patch fixing MR-ISSUE-553 
  "IRoutingEngine service when present in parent container is not used by DefaultMonoRailContainer"

- Applied Rich Prior's patch fixing MR-ISSUE-550
  "AspView can't find view when accessing paths with a capital 'I' when set to Turkish locale"

- Applied John Simons' patch fixing MR-ISSUE-546
  "Check for route name before UseCurrentRouteParams on DefaultUrlBuilder"

- Applied John Simons' patch fixing MR-ISSUE-545
  "UrlHelper.ButtonLink produces wrong HTML"

- Applied patch by Gildas fixing MR-ISSUE-522
  "AspView and the IDictionaryAdapterFactory"
  This patch integrate the IDictionaryAdapterFactory into the IMonoRailServices interface and its implementations.
- Applied patch by Martin Nilsson fixing MR-ISSUE-515
  "Priorize view engines."
  MR now guarantees that the view engines are resolved in the order of engine registrations.
- Applied John Simons' patch fixing MR-ISSUE-531
  "update Monorail Wizard framework to support routing"
- Fixed missing parameter in function definition for JSON bound parameters.
- JSONBinder EntryKey is now respected as a serverside parameter name when specified in the attribute.
- Added JQuery proxy generator.
- Refactored the proxy generator to an abstract class making it easier for clients to plugin.

- The path supplied in <path location="" /> is now relative to the site root.