@@ -1,7 +1,6 @@
 <Configuration>
   <CodeStyleSettings>
-    <ExternalPath IsNull="False">
-    </ExternalPath>
+    <ExternalPath IsNull="False" />
     <Sharing>SOLUTION</Sharing>
     <CSharp>
       <FormatSettings>
@@ -82,8 +81,7 @@
 ]]></FileHeader>
     <GenerateMemberBody />
     <Naming2>
-      <ExceptionName IsNull="False">
-      </ExceptionName>
+      <ExceptionName IsNull="False" />
       <PredefinedRule Inspect="True" Prefix="" Suffix="" Style="AaBb" ElementKind="MethodPropertyEvent" />
       <PredefinedRule Inspect="True" Prefix="" Suffix="" Style="AaBb" ElementKind="TypesAndNamespaces" />
       <PredefinedRule Inspect="True" Prefix="I" Suffix="" Style="AaBb" ElementKind="Interfaces" />
