@@ -1,5 +1,10 @@
 Unreleased
 ==========
+- Updated ActiveRecord + TemplateEngine to release versions
+
+- Applied Alwin's patchfixing MR-ISSUE-557
+  "SmtpUseSsl="true" can be specified in monorail config file"
+
 - Updated dependecies to latest released versions
 
 - Removed dependency on Castle.Components.Common.EmailSender.dll and is now using IEmailSender from Castle.Core.dll
